force-app/main/default/objects/Translator__c/Translator__c.object-meta.xml
<CustomObject>
    <label>Translator</label>
    <nameField>
        <label>Translator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>