force-app/main/default/objects/Translator__c/fields/DocumentTemplate__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Translators</relationshipLabel>
    <relationshipName>Translators</relationshipName>
    <type>Lookup</type>
</CustomField>