force-app/main/default/objects/Translator__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>Field Value</label>
    <type>TextArea</type>
</CustomField>