force-app/main/default/objects/Translator__c/fields/Translated_Value__c.field-meta.xml
<CustomField>
    <fullName>Translated_Value__c</fullName>
    <label>Translated Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>